--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ author_github: KaraWolter
 description: |
   A blog where I talk about the technologies I am using and whatever else I feel like.
 baseurl: "/"
-url: http://www.thegingertechie.com
+url: https://karawolter.github.io
 paginate: 12
 github:
   user: KaraWolter
   repository: KaraWolter.github.io
-  url: http://www.thegingertechie.com
+  url: https://karawolter.github.io
   status: true
 home_bgfile: bg.jpg
 sass:
