--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github:
   repository: KaraWolter.github.io
   url: http://thegingertechie.com/
   status: true
-home_bgfile: bg.jpg
+home_bgfile: home.png
 sass:
   sass_dir: assets/css
   style: compressed
