--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 title: The Ginger Techie
-email: kara.wolter@gmail.com
+email: thegingertechie@gmail.com
 author: Kara Wolter
 author_github: KaraWolter
 description: |
