--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ author_github: KaraWolter
 description: |
   A blog where I talk about the technology and anything else I'm interested in.
 baseurl: "/"
-permalink: ":title"
+permalink: ":slug"
 url: http://thegingertechie.com
 paginate: 12
 github:
