adjusting google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,8 @@ kramdown:
   input: GFM
   hard_wrap: false
 highlighter: rouge
+google_analytics: 'UA-98468743-1'
 gems:
 - jekyll-paginate
 exclude:
 - vendor
-# Google
-google_analytics: UA-98468743-1
