updating my name

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ---
 title: The Ginger Techie
 email: thegingertechie@gmail.com
-author: Kara Wolter
+author: Kara Waldemer
 author_github: KaraWolter
 description: |
   A blog where I talk about the technology and anything else I'm interested in.
