--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ description: |
   A blog where I talk about the technology and anything else I'm interested in.
 baseurl: "/"
 permalink: ":slug"
-url: http://thegingertechie.com
+url: https://thegingertechie.com
 paginate: 12
 github:
   user: KaraWolter
   repository: KaraWolter.github.io
-  url: http://thegingertechie.com
+  url: https://thegingertechie.com
   status: true
   avatar: https://avatars1.githubusercontent.com/u/5532043?v=3&u=00d95a0d6b01d35811383ee28b140a142cb98400&s=400
 home_bgfile: home.png
