trying renaming the image

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: The Ginger Techie
 email: thegingertechie@gmail.com
 author: Kara Waldemer
-author_github: KaraWolter
+author_github: KaraWaldemer
 description: |
   A blog where I talk about the technology and anything else I'm interested in.
 baseurl: "/"
